<resources>
    <string name="app_name">FederatedBirds</string>
    <string name="hello" />
    <string name="login">Connection</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="invalid_format">Incorrect format</string>
    <string name="login_failed">Connection failed</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="open_menu">Open the menu</string>
    <string name="close_menu">Close the menu</string>
    <string name="logout">Disconnection</string>
    <string name="login_progress">Connecting...</string>
    <string name="followed">Followed</string>
    <string name="new_message">New message</string>
    <string name="post">Post</string>
    <string name="empty_message_error">Empty message not posted</string>
    <string name="progress">Processing...</string>
    <string name="post_failed">The post failed.</string>
    <string name="signup">Sign Up</string>
    <string name="email">Email Address</string>
    <string name="registration_failed">User registration failed.</string>
    <string name="cancel">Cancel</string>
    <string name="registration_success">User registrated successfully</string>
    <string name="followers">Followers</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="following_success">You are now following this user</string>
    <string name="unfollowing_success">You dont follow this user anymore</string>
    <string name="auth_restriction">You dont have authorization for this action</string>
    <string name="browse_gallery">Browse gallery</string>
    <string name="upload_picture">Upload picture</string>
    <string name="select_file">First select a file from gallery</string>
    <string name="file_uploaded">Successfully uploaded new avatar</string>
    <string name="upload_failed">Something went wrong while uploading file</string>
</resources>
